[package]
name = "mytinyrenderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "^0.17"
pre-commit = "^0.5"

[package.metadata.precommit]
fmt = "cargo fmt --check 2>&1"
test = "cargo test 2>&1"
